# flatbuffers_test

./: CMakeLists.txt  README  receiver.cpp  sender.cpp
data/: property.bfbs
include/: monster_generated.h  property_generated.h
include/flatbuffers/: reflection.h
schema/: property.fbs
